--- a/build.gradle
+++ b/build.gradle
@@ -1,85 +1,55 @@
+buildscript {
+    apply from: gradle.extended.files.modules
+    apply from: "gradle/versions.gradle"
+
+    dependencies {
+        classpath additionals.sonarqube.gradlePlugin
+        classpath additionals.nexus.gradlePlugin
+        classpath additionals.license.gradlePlugin
+    }
+}
+
 plugins {
-    id "org.jetbrains.kotlin.multiplatform" version "1.3.72"
-    id "maven-publish"
-    id "jacoco"
-    //id "org.jetbrains.dokka" version "0.10.0"
+    alias(additionals.plugins.publish.nexus)
+    alias(additionals.plugins.android.library) apply false
+    alias(additionals.plugins.kotlin.multiplatform) apply false
+    alias(additionals.plugins.kotlin.jvm) apply false
 }
 
-repositories {
-    mavenCentral()
-}
-
-group = "guru.zoroark"
-version = "0.1-SNAPSHOT"
-
-kotlin {
-    jvm()
-    js {
-        browser {
-        }
-        nodejs {
-        }
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        mavenLocal()
     }
+}
 
-    sourceSets {
-        all {
-            languageSettings {
-                useExperimentalAnnotation("kotlin.RequiresOptIn")
-            }
-        }
-        commonMain {
-            dependencies {
-                implementation kotlin('stdlib-common')
-            }
-        }
+group = rootProject.ext.group
+version = rootProject.ext.version
 
-        commonTest {
-            dependencies {
-                implementation kotlin('test-common')
-                implementation kotlin('test-annotations-common')
-            }
-        }
+def getExtraString = { String name ->
+    if (rootProject.ext.has(name)) return rootProject.ext[name]?.toString()
+    else return null
+}
 
-        jvmMain {
-            dependencies {
-                implementation kotlin('stdlib-jdk8')
-                implementation "org.jetbrains:annotations:18.0.0"
-            }
-        }
-
-        jvmTest {
-            dependencies {
-                implementation kotlin('test-junit')
-            }
-        }
-
-        nonJvmMain {
-            dependsOn commonMain
-        }
-
-        jsMain {
-            dependencies {
-                implementation kotlin('stdlib-js')
-            }
-            dependsOn nonJvmMain
-        }
-
-        jsTest {
-            dependencies {
-                implementation kotlin('test-js')
-            }
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl = URI.create("https://ossrh-staging-api.central.sonatype.com/service/local/")
+            snapshotRepositoryUrl = URI.create("https://central.sonatype.com/repository/maven-snapshots/")
+            username = getExtraString("sonatypeUsername") ?: ""
+            password = getExtraString("sonatypePassword") ?: ""
         }
     }
 }
 
-task jacocoTestReport(type: JacocoReport) {
-    executionData jvmTest
-    reports {
-        xml.enabled = true
+subprojects {
+    group = rootProject.ext.group
+    version = rootProject.ext.version
+
+    task allDeps(type: DependencyReportTask) {}
+
+    if (isSourcesModule(it)) {
+        apply from: gradle.extended.files.moduleSetup
     }
-    classDirectories.setFrom(fileTree("${buildDir}/classes/kotlin/jvm/main"))
-    sourceDirectories.setFrom(
-            kotlin.sourceSets["commonMain"].kotlin.sourceDirectories,
-            kotlin.sourceSets["jvmMain"].kotlin.sourceDirectories
-    )
 }
